--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </head>
 
 <body>
@@ -73,105 +73,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!--ERASEEEEEEEEE <div class="col-12 col-sm-4 col-md-3 box" id="2">
-                            <div class="card w-100 h-100">
-                                <div class="card-header d-flex align-items-center justify-content-between">
-                                    <h5 class="card-title mb-0">Cryp2</h5>
-                                    <div class="form-check form-switch ms-2">
-                                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault-1">
-                                        <label class="form-check-label" for="flexSwitchCheckDefault-1"></label>
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h6 class="card-subtitle">name2</h6>
-                                    <br>
-                                    <a href="#" class="btn btn-primary">More info</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-4 col-md-3 box" id="3">
-                            <div class="card w-100 h-100">
-                                <div class="card-header d-flex align-items-center justify-content-between">
-                                    <h5 class="card-title mb-0">Cryp3</h5>
-                                    <div class="form-check form-switch ms-2">
-                                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault-1">
-                                        <label class="form-check-label" for="flexSwitchCheckDefault-1"></label>
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h6 class="text-muted">name3</h6>
-                                    <br>
-                                    <a href="#" class="btn btn-primary">More info</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-4 col-md-3 box" id="4">
-                            <div class="card w-100 h-100">
-                                <div class="card-header d-flex align-items-center justify-content-between">
-                                    <h5 class="card-title mb-0">Cryp4</h5>
-                                    <div class="form-check form-switch ms-2">
-                                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault-1">
-                                        <label class="form-check-label" for="flexSwitchCheckDefault-1"></label>
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h6 class="text-muted">name4</h6>
-                                    <br>
-                                    <a href="#" class="btn btn-primary">More info</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-4 col-md-3 box" id="4">
-                            <div class="card w-100 h-100">
-                                <div class="card-header d-flex align-items-center justify-content-between">
-                                    <h5 class="card-title mb-0">Cryp4</h5>
-                                    <div class="form-check form-switch ms-2">
-                                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault-1">
-                                        <label class="form-check-label" for="flexSwitchCheckDefault-1"></label>
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h6 class="text-muted">name4</h6>
-                                    <br>
-                                    <a href="#" class="btn btn-primary">More info</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-4 col-md-3 box" id="4">
-                            <div class="card w-100 h-100">
-                                <div class="card-header d-flex align-items-center justify-content-between">
-                                    <h5 class="card-title mb-0">Cryp4</h5>
-                                    <div class="form-check form-switch ms-2">
-                                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault-1">
-                                        <label class="form-check-label" for="flexSwitchCheckDefault-1"></label>
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h6 class="text-muted">name4</h6>
-                                    <br>
-                                    <a href="#" class="btn btn-primary">More info</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-4 col-md-3 box" id="1">
-                            <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault-1">
-                                <label class="form-check-label" for="flexSwitchCheckDefault-1"></label>
-                            </div>
-
-                            <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked-1" checked>
-                                <label class="form-check-label" for="flexSwitchCheckChecked-1"> if pushed > js</label>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-4 col-md-3 box" id="2">Cryp2</div>
-                        <div class="col-12 col-sm-4 col-md-3 box" id="3">
-
-                            <h6>כרטיס מידע</h6>
-                            <p>טקסט קצר...</p>
-                            <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#infoModal">
-                                More info
-                            </button> -->
 
                             <!-- Modal -->
                             <div class="modal fade" id="infoModal" tabindex="-1" aria-hidden="true">
