--- a/index.html
+++ b/index.html
@@ -35,11 +35,6 @@
                 <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane"
                     type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">About</button>
             </li>
-            <!-- <li class="nav-item" role="presentation">
-                <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane"
-                    type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false"
-                    disabled>Disabled</button>
-            </li>  ERASEEEEEEEEEEEE-->
         </ul>
 
 
@@ -47,84 +42,35 @@
             <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
                 tabindex="0">
 
-
                 <div class="container">
+                    <div id="progress-bar" class="progress-bar-overlay"> </div>
                     <form id="search-form">
                         <div class="d-flex"> <input id="search-input" class="form-control" type="search"
                                 placeholder="Search" aria-label="Search">
                             <button class="btn btn-primary" type="submit">Search</button>
                         </div>
                     </form>
-
                     <div class="row w-100" id="coin-cards">
-                        <div class="col-12 col-sm-4 col-md-3 box" id="1">
-                            <div class="card w-100 h-100">
-                                <div class="card-header d-flex align-items-center justify-content-between">
-                                    <h5 class="card-title mb-0">Cryp1</h5>
-                                    <div class="form-check form-switch ms-2">
-                                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault-1">
-                                        <label class="form-check-label" for="flexSwitchCheckDefault-1"></label>
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h6 class="card-subtitle">name1</h6>
-                                    <br>
-                                    <a href="#" class="btn btn-primary">More info</a>
-                                </div>
-                            </div>
-                        </div>
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="infoModal" tabindex="-1" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title">מידע נוסף</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="סגור"></button>
-                                        </div>
-                                        <div class="modal-body" id="modalContent">
-                                            נטען מידע מה־API...
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary"
-                                                data-bs-dismiss="modal">סגור</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <script>
-                                const modalContent = document.getElementById('modalContent');
-                                document.getElementById('infoModal').addEventListener('show.bs.modal', async () => {
-                                    modalContent.textContent = 'טוען...';
-                                    // כאן אתה טוען את המידע מה-API
-                                    const data = await fetch('https://api.example.com/data')
-                                        .then(res => res.json());
-                                    modalContent.textContent = JSON.stringify(data, null, 2);
-                                });
-                            </script>
-
-
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-                tab
-                1
-            </div>
-            <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, optio dignissimos ratione
-                    in,
-                    nisi nesciunt, iusto minima cupiditate minus hic maiores tenetur exercitationem pariatur
-                    corporis
-                    suscipit non deserunt placeat culpa.
-            </div>
-            <!-- <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab"
+        </div>
+    </div>
+    <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+        tab
+        1
+    </div>
+    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, optio dignissimos ratione
+            in,
+            nisi nesciunt, iusto minima cupiditate minus hic maiores tenetur exercitationem pariatur
+            corporis
+            suscipit non deserunt placeat culpa.
+    </div>
+    <!-- <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab"
                 tabindex="0"> ERASE
                 tab 3</div> -->
-        </div>
+    </div>
     </div>
 </body>
 
