--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <div class="container">
                     <div id="progress-bar" class="progress-bar-overlay"> </div>
                     <form id="search-form">
-                        <div class="d-flex"> <input id="search-input" class="form-control" type="search"
-                                placeholder="Search" aria-label="Search">
+                        <div class="d-flex">
+                            <input id="search-input" class="form-control" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-primary" type="submit">Search</button>
-                            <button class="btn btn-primary" id="clear"> Clear selected coins </button>
+                            <button class="btn btn-secondary" id="clear"> Clear selected coins </button>
                         </div>
                     </form>
                     <div class="row w-100" id="coin-cards">
@@ -78,26 +78,61 @@
                     </div>
                 </div>
             </div>
+
+
+            <div class="tab-pane fade" id="live-reports-tab-pane" role="tabpanel" aria-labelledby="live-reports-tab"
+                tabindex="0">
+
+                <div class="container my-5">
+                    <div class="row justify-content-center w-100">
+                        <div class="col-12 col-md-10 col-lg-8">
+                            <div id="live-reports-container" class="rounded shadow">
+                                <canvas id="live-reports-chart"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                <div class="container py-4">
+                    <div class="row align-items-center bg-white bg-opacity-75 rounded shadow p-4">
+
+                        <div class="col-12 col-md-4 text-center mb-3 mb-md-0">
+                            <img src="img/ProfilePic.jpg" alt="Profile" class="img-fluid rounded-circle shadow"
+                                style="max-width: 200px;">
+                        </div>
+
+                        <div class="col-12 col-md-6">
+                            <h3>Michael Alon Uzan</h3>
+                            <p>
+                                I am Michael Uzan, a software developer with interest in crypto and digital trading. In
+                                this project, I developed the Coin's Application to display cryptocurrency data,
+                                including live prices and graphical reports.
+                            </p>
+                            <h5>Project Description</h5>
+                            <p>
+                                The application uses an external API to fetch coin data and presents it interactively.
+                                You can search coins by symbol, track selected coins, and view live reports with
+                                up-to-date charts.
+                            </p>
+
+                            <div class="mt-3">
+                                <a href="https://github.com/MichaelAlonU" target="_blank" class="btn btn-outline-dark">
+                                    GitHub
+                                </a>
+
+                            </div>
+                            <br>
+                            <br>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </div>
-    <div class="tab-pane fade" id="live-reports-tab-pane" role="tabpanel" aria-labelledby="live-reports-tab"
-        tabindex="0">
-
-
-        <div id="live-reports-container">
-            <canvas id="live-reports-chart"></canvas>
-        </div>
-
-
-
-
-    </div>
-    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, optio dignissimos ratione
-            in,
-            nisi nesciunt, iusto minima cupiditate minus hic maiores tenetur exercitationem pariatur
-            corporis
-            suscipit non deserunt placeat culpa.
     </div>
 
 </body>
